# stdlib

./: .gitignore  CMakeLists.txt  README.md  justfile  shell.nix
.github/workflows/: release.yml  test.yml
include/: libhavo.h
source/: library.c
