CMAKE_MINIMUM_REQUIRED(VERSION 3.26)
PROJECT(
        havo
        VERSION 0.0.3
        LANGUAGES C
        DESCRIPTION "Standard Library of Osmon"
)

INCLUDE(GNUInstallDirs)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

SET(CMAKE_C_STANDARD 23)
SET(BUILD_SHARED_LIBS ON)

SET(SOURCE_FILES
    source/library.c
)

ADD_LIBRARY(havo SHARED ${SOURCE_FILES})

INSTALL(TARGETS havo
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)